Mon Oct 25 06:50:17 EDT 1999 Ben Collins <bcollins.debian.org>

  * main/processarc.c: fixes calculation of package filename display (the
    ".../foo.deb" one) where it was showing the full path if the basename
    was longer than 30 chars. Now shows just the basename if it can't
    squeez the full path to < 30 chars (even if the basename is > than 30
    chars)

Sun Oct 24 20:46:44 EDT 1999 Ben Collins <bcollins.debian.org>

  * scripts/dpkg-source.pl: we want to 'delete' the POSIXLY_CORRECT env
    not 'undef'

Sun Oct 24 20:25:11 EDT 1999 Ben Collins <bcollins.debian.org>

  * debian/dpkg-doc-{postrm,prerm}: Added install-info for internals.info
  * debian/dpkg-internals: fixed misplaced description

Mon Oct 25 02:27:49 CEST 1999 Wichert Akkerman <wakkerma@debian.org>

  * dselect/main.cc: Fixup error message for invalid parameter to reflect
    we are dselect, not dpkg

Sun Oct 24 11:39:21 EDT 1999 Ben Collins <bcollins.debian.org>

  * debian/control: added dpkg-doc
  * debian/dpkg-doc-{postinst,prerm}: new files for dpkg-doc package
  * debian/dpkg-internals: doc-base support for dpkg-doc
  * debian/rules: added build rules for dpkg-doc to binary-indep target
  * doc/Makefile.am: changed build setup for internals.sgml to use the
    debiandoc tools, and removed internals.* stuff from being built by
    default. Two new targets, internals and internals-install, now handle
    this
  * doc/changelog: removed, duplicate of ChangeLog
  * doc/internals.sgml: converted to debiandoc format, now builds correctly
    and without errors
  * doc/manuals-version: removed since it is generated at build time
  * doc/texinfo.*: moved to doc/obsolete/ since the debiandoc format doesn't
    need them
  * main/filesdb.c: fixed compiler warning

Sat Oct 23 21:23:08 EDT 1999 Ben Collins <bcollins.debian.org>

  * Added 'D' to the list of choices for conffile handling

Sat Oct 23 16:25:16 EDT 1999 Ben Collins <bcollins.debian.org>
