@@ -1,3 +1,8 @@
+Mon Oct 25 08:42:52 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * debian/rules: fix symlink creaton for /usr/share/doc/dpkg-dev -> dpkg,
+    also compress the info and ps files for internals in dpkg-doc
+
 Mon Oct 25 06:50:17 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * main/processarc.c: fixes calculation of package filename display (the
